2009-02-24 Roman
- !!!:/SYS,/UI/VCAEngine: Realised object TVariant for storing different data types.
    The object is used for direct access to system's ("id" and "path") atributes of widgets of UI.VCAEngine.
- !:/SYS: TCntrNode::nodeAccess() is renamed to TCntrNode::nodeRes().


2009-02-23 Roman
- !!!!:/Config,/DB,/DB/DBF,/DB/MySQL,/DB/SQLite,/DB/FireBird: The special flag for key using into requests dataSeek() and dataDel() is added 
    Allow select all types keys, not only string. All objects is used new flag now. The subsystem's archive modules API version rise to 2.
- !!!!:/Archive,/Mess,/Archive/FSArch,/Archive/DBArch,/UI/VCAEngine,/UI/Vision,/UI/WebVision:
    The subsystem's archive modules API version rise to 2. Microseconds time part is added for mesages.
- FIX:/Archive: The archivation of messages task is fixed for first and last call.
- /SYS: The control flag for running check is added to subsystem's object.
- !:/Archive/FSArch: Released version 1.1.0.


2009-02-20 Maxim
- FIX:/UI/WebVision: Release of memory which was allocated for each image is fixed.


2009-02-20 Roman
- !!:/DAQ: Rise sybsystem "DAQ" modules' API version to level 2.
- FIX:/DAQ/JavaLikeCalc: Subsystem's modules API version fixed from VER_SPC to VER_CNTR.
- !!!!:/Protocol/HTTP,/UI/WebCfg,/UI/WebCfgD,/UI/WebVision: HTTP modules auth mechanism moved to Protocol.HTTP from all WEB-modules, separated.
    CSS is made unified.
- FIX:/UI/Web: Access from Web-browser Konqueror 3.5 and 4 final fixed into using AJAX requests by 'Content-Type' setting to 'text/xml; charset=utf-8'.
- FIX:/UI/WebVision: Window scroll is fixed for spinbox.
- FIX:/UI/Vision: A color preview into the inspector attributes for transparent colors is fixed.


2009-02-18 Roman
- /XML: Including XML-header to result text by function XMLNode::save is added.
- FIX:/Protocol/HTTP,/UI/WebCfg,/UI/WebCfgD,/UI/WebVision: No inserting and not full processing simbol '\r' into HTTP protocol's end line.